Update 计算机操作系统 - 进程管理.md
更新批处理系统的内容

--- a/docs/notes/计算机操作系统 - 进程管理.md
+++ b/docs/notes/计算机操作系统 - 进程管理.md
@@ -103,6 +103,14 @@ QQ 和浏览器是两个进程，浏览器进程里面有很多线程，例如 H
 
 按估计剩余时间最短的顺序进行调度。
 
+**1.4 最高响应比优先 Highest Response Ratio Next (HRRN) **
+
+调度时，首先计算每个进程的响应比R；之后，总是选择R最高的进程执行
+
+> 响应比R  = 周转时间 / 处理时间
+          =（处理时间 + 等待时间）/ 处理时间
+          =1 + (等待时间 / 处理时间）
+
 ## 2. 交互式系统
 
 交互式系统有大量的用户交互操作，在该系统中调度算法的目标是快速地进行响应。
